# PRAE

./: .dockerignore  .gitignore  CLAUDE_START_PROMPT.md  CODEX_START_PROMPT.md  CONTRIBUTING.md  Dockerfile  LLM_ENTRYPOINT.md  NAMING_CONVENTIONS.md  README.md  bootstrap.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/minimal/: README.md
methodology/: GLOSSARY.md  PRAE_ARTIFACTS.md  PRAE_CORE_MODEL.md  PRAE_PHASE_GATES.md  PRAE_QUICKSTART.md  PRAE_RESEARCH_GATE.md  PRAE_ROLES.md
project-pack/: AI_CONTEXT.template.md  README.md
project-pack/prae/: PRAE_INIT.md
project-pack/tools/: _artifacts.py  _cli.py  _gate_utils.py  _output.py  _registry.py  add_track.py  advance_phase.py  check_conclusion.py  check_phase_gate.py  check_research_gate.py  check_track_status.py  generate_conclusion.py  generate_phase_gate.py  init_project.py  lock_infra_track.py  new_exp.py  new_track.py  prae_bootstrap.py  reopen_project.py  sync_project_pack.py  update_track_state.py
runtime/abstract/: ANALYST_ROLE.prompt.md  CONCLUSION.template.md  (+7 more)
tests/: conftest.py
tools/: _conclusion_docs.py  _gate_utils.py  _output.py  _phase_docs.py  _registry.py  add_track.py  advance_phase.py  check_conclusion.py  check_contracts.py  check_phase_gate.py  check_research_gate.py  check_track_status.py  finalize_project.py  generate_conclusion.py  graduate_track.py  init_project.py  lock_infra_track.py  new_exp.py  new_track.py  prae_bootstrap.py  record_result.py  reopen_project.py  sync_project_pack.py  update_track_state.py
(+62 files in other folders)
